# files-software-development-claude-code

./: .gitignore  README.md  SETUP.md  pyproject.toml
Hooks/: README.md  conftest.py  settings.json
MCP/: README.md  mcp.json
music-analytics/: analytics.py
music-analytics-api/: analytics.py
music-analytics-api-explored/: CLAUDE.md  app.py  config.py
music-analytics-api-refactor/: config.py  test_routes.py
music-analytics-api-with-agent/: CLAUDE.md  models.py
music-analytics-api-with-db/: CLAUDE.md  config.py
music-analytics-api-with-db-routed/: CLAUDE.md  app.py  db_routes.py  middleware.py
music-analytics-api-with-db-routed-validated/: db_routes.py  models.py
music-analytics-api-with-db-routed-validated/.claude/skills/unit-tests/: SKILL.md
music-analytics-api-with-db-routed/.claude/: settings.json
music-analytics-api-with-db/.claude/skills/refactor/: SKILL.md
music-analytics-api-with-hooks/: conftest.py  routes.py
music-analytics-api-with-hooks/.claude/: settings.json
music-analytics-api-with-hooks/.claude/agents/: code-reviewer.md
music-analytics-api-with-skill/: CLAUDE.md
music-analytics-reporter-build/: CLAUDE.md  PLAN.md
music-analytics-reporter-plan/: CLAUDE.md
music-analytics-reporter-review/: test_reporter.py
music-analytics-reporter-review/.claude/agents/: code-reviewer.md
music-analytics-reporter-test/: CLAUDE.md  reporter.py
