[project]
name = "files-software-development-with-claude-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachelib>=0.13.0",
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "flask-session>=0.8.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
]
